- navbar를 통해 관리자 권한의 사용자가 관리자 페이지로 이동할 수 있도록 수정 - user앱의 admin.py를 수정하여 특정 superuser외의 계정들은 삭제할 수 있도록 수정

--- a/static/css/login_register.css
+++ b/static/css/login_register.css
@@ -292,5 +292,11 @@ label {
 	padding-left: 2.5em;
 	font-weight: 600;
 	font-size: 1rem;
+}
+
+.control-container,
+.label-box,
+.check-icon,
+label {
 	cursor: pointer;
 }
