--- a/templates/user/login_register.html
+++ b/templates/user/login_register.html
@@ -37,27 +37,30 @@
 					<div class="control-container">
 						<input
 							type="radio"
-							checked
-							name="role"
 							id="role-user"
+							name="role"
 							value="user"
-							class="screen-reader" />
-						<div class="label-box">
+							class="screen-reader"
+							checked />
+
+						<label class="label-box" for="role-user">
 							<span class="check-icon" aria-hidden="true"></span>
-							<label for="role-user">사용자</label>
-						</div>
+							사용자
+						</label>
 					</div>
+
 					<div class="control-container">
 						<input
 							type="radio"
-							name="role"
 							id="role-admin"
+							name="role"
 							value="admin"
 							class="screen-reader" />
-						<div class="label-box">
+
+						<label class="label-box" for="role-admin">
 							<span class="check-icon" aria-hidden="true"></span>
-							<label for="role-admin">관리자</label>
-						</div>
+							관리자
+						</label>
 					</div>
 				</div>
 
