--- a/templates/chatbot/chatbot.html
+++ b/templates/chatbot/chatbot.html
@@ -1,20 +1,20 @@
-<!-- prettier-ignore -->
-{% extends 'base/index.html' %} 
-{% block title %}와인 입문 가이드 챗봇{% endblock %} 
+{% extends 'base/index.html' %}
+{% load static %}
+
+{% block title %}와인 입문 가이드 챗봇{% endblock %}
 
 {% block css %}
-{% load static %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}" />
+<!-- 메인 공통 스타일: 컬러, 폰트, 네우모피즘 -->
+<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+<!-- 챗봇 전용 스타일 -->
 <link rel="stylesheet" href="{% static 'css/chatbot.css' %}" />
 {% endblock %}
 
-<!-- prettier-ignore -->
 {% block js %}
 <script src="{% static 'js/chatbot.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% endblock %}
 
-<!-- prettier-ignore -->
 {% block content %}
 {% csrf_token %}
 <div class="chat-wrapper">
@@ -24,11 +24,7 @@
 		</div>
 	</div>
 	<div class="input-box">
-		<input
-			type="text"
-			id="user-input"
-			placeholder="메시지를 입력하세요..."
-			autofocus
+		<input type="text" id="user-input" placeholder="메시지를 입력하세요..." autofocus
 			onkeydown="if(event.key==='Enter') addMessage()" />
 		<button onclick="addMessage()">보내기</button>
 	</div>
