--- a/static/css/login_register.css
+++ b/static/css/login_register.css
@@ -23,7 +23,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 60px;
+	margin-top: 200px;
+	justify-content: center;   /* 좌우 가운데 */
+	align-items: center;       /* 위아래 가운데 */
 }
 
 h1 {
@@ -56,7 +58,7 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid var(--accent-dark);
+	/* border: 1px solid var(--accent-dark); */
 	background-color: var(--accent-dark);
 	color: var(--main-light);
 	font-size: 12px;
@@ -65,21 +67,23 @@ button {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
-}
-
-button:active {
-	transform: scale(0.95);
-}
-
-button:focus {
 	outline: none;
+	border : none;
 }
 
-button.ghost {
-	background-color: transparent;
-	border-color: var(--main-dark);
-	color: var(--main-dark);
-}
+/* button:active {
+	transform: scale(0.95);
+} */
+
+/* button:focus {
+	outline: none;
+} */
+
+/* button.ghost { */
+	/* background-color: transparent; */
+	/* border-color: var(--main-dark); */
+	/* color: var(--main-dark); */
+/* } */
 
 form {
 	background-color: #FFFFFF;
@@ -113,6 +117,7 @@ input {
 	width: 768px;
 	max-width: 100%;
 	min-height: 480px;
+
 }
 
 .form-container {
@@ -177,14 +182,14 @@ input {
 }
 
 .overlay {
-	background: linear-gradient(to right, var(--main-dark), var(--accent-dark));
+	background-color: var(--main-dark);
 	color: var(--main-light);
 	position: relative;
 	left: -100%;
 	height: 100%;
 	width: 200%;
 	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+	/* transition: transform 0.6s ease-in-out; */
 }
 
 .container.right-panel-active .overlay {
