--- a/templates/chatbot/chatbot.html
+++ b/templates/chatbot/chatbot.html
@@ -20,11 +20,11 @@
 <div class="chat-wrapper">
 	<div class="chat-box" id="chat-box">
 		<div class="message bot">
-			<div class="message-content">안녕하세요! 무엇을 도와드릴까요?</div>
+			<div class="message-content">안녕하세요! 와인 입문 가이드 챗봇 VINO입니다. 무엇을 도와드릴까요?</div>
 		</div>
 	</div>
 	<div class="input-box">
-		<input type="text" id="user-input" placeholder="메시지를 입력하세요..." autofocus
+		<input type="text" id="user-input" placeholder="메시지를 입력하세요." autofocus
 			onkeydown="if(event.key==='Enter') addMessage()" />
 		<button onclick="addMessage()">보내기</button>
 	</div>
