--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -16,7 +16,7 @@
 				</a>
 
 				<div class="nav-toggle" id="nav-toggle">
-					<i class="fa fa-bars"></i>
+					<i class="fa fa-bars" style="color: var(--main-dark)"></i>
 				</div>
 
 				<ul class="nav-menu" id="nav-menu">
