--- a/static/css/login_register.css
+++ b/static/css/login_register.css
@@ -22,7 +22,11 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 60px;
+	width: 100%;
+	height: 100vh;
+	/* margin-top: 60px; */
+	justify-content: center; /* 좌우 가운데 */
+	align-items: center; /* 위아래 가운데 */
 }
 
 h1 {
@@ -55,7 +59,7 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid var(--accent-dark);
+	/* border: 1px solid var(--accent-dark); */
 	background-color: var(--accent-dark);
 	color: var(--main-light);
 	font-size: 12px;
@@ -64,21 +68,23 @@ button {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
-}
-
-button:active {
-	transform: scale(0.95);
-}
-
-button:focus {
 	outline: none;
+	border: none;
 }
 
-button.ghost {
-	background-color: transparent;
-	border-color: var(--main-dark);
-	color: var(--main-dark);
-}
+/* button:active {
+	transform: scale(0.95);
+} */
+
+/* button:focus {
+	outline: none;
+} */
+
+/* button.ghost { */
+/* background-color: transparent; */
+/* border-color: var(--main-dark); */
+/* color: var(--main-dark); */
+/* } */
 
 form {
 	background-color: #ffffff;
@@ -173,14 +179,14 @@ input {
 }
 
 .overlay {
-	background: linear-gradient(to right, var(--main-dark), var(--accent-dark));
+	background-color: var(--main-dark);
 	color: var(--main-light);
 	position: relative;
 	left: -100%;
 	height: 100%;
 	width: 200%;
 	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+	/* transition: transform 0.6s ease-in-out; */
 }
 
 .container.right-panel-active .overlay {
